# Iris-Lang

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  笔记.txt
.github/workflows/: c-cpp-macos-debug.yml  c-cpp-macos-release.yml  c-cpp-macos.yml  c-cpp-ubuntu-debug.yml  c-cpp-ubuntu-release.yml  c-cpp-ubuntu.yml  c-cpp-windows-debug.yml  c-cpp-windows-release.yml  c-cpp-windows.yml  c-cpp.yml
include/: evaluator.hpp  expr.hpp  lexer.hpp  logger.hpp  parser.hpp  token.hpp  version.hpp
source/: expr.cpp  lexer.cpp  parser.cpp  token.cpp
test/: logger.cpp
